--- a/posts/2017-10-27.md
+++ b/posts/2017-10-27.md
@@ -96,7 +96,7 @@ At this point the authors of CCS 2017 announce success, because it could be that
 
 There are a few issues with this line of reasoning.
 
-First, there is a fundamental difference between attacking a "class" and attacking a "participant". The former is learning statistical information about the training data, and the second is learning specific information about a participant. It could certainly happen to be that these are the same, but it has to *happen to be*; the authors attack cannot make it happen if it is not the case. It's a bit like how learning the median salary in a US Census tract could be a privacy violation if you happen to be the only person there; it could be the case, but it would be a bit much to then claim that all of statistics "is fundamentally broken and does not protect the training sets of honest participants".
+First, there is a fundamental difference between attacking a "class" and attacking a "participant". The former is learning statistical information about the training data, and the second is learning specific information about a participant. It could certainly happen to be that these are the same, but it has to *happen to be*; the authors' attack cannot make it happen if it is not the case. It's a bit like how learning the median salary in a US Census tract could be a privacy violation if you happen to be the only person there; it could be the case, but it would be a bit much to then claim that all of statistics "is fundamentally broken and does not protect the training sets of honest participants".
 
 Second, the authors imagine that the learning approach is obliged to correctly reveal the details of the class, even if it has only a single member. If the learning approach fails to do so, the authors imply that this means that the learning approach is somehow defective. In fact, it makes a great deal of sense for any learning approach to *avoid* overfitting to specific inputs, and to only provide detailed information about classes for which there is broad statistical support. Many (if not most) reasonable learning approaches will *not* continue to fit the description of a class to a single training example, which seems to deflect the proposed attack.
 
@@ -140,7 +140,7 @@ Pretty clear. To quote from CCS 2017 (emphasis mine):
 
 > For each epoch (iteration) of the collaborative learning process, [CCS 2015] define a total privacy budget ε **for each participant**.
 
-So both papers agree that the differential privacy budget is set by *per participant*, rather than per record. And, to the best of my understanding, the CCS 2017 evaluation uses the code from CCS 2015, which uses a per-participant (and per-epoch) privacy budget. So where does the "record-level differential privacy" come from?
+So both papers agree that the differential privacy budget is set by *per participant*, rather than per record. And, to the best of my understanding, the CCS 2017 evaluation uses the code from CCS 2015, which uses a per-participant privacy budget (at least, in each epoch). So where does the "record-level differential privacy" come from?
 
 It's hard to tell. CCS 2017's citation [1], [Deep Learning with Differential Privacy](https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/45428.pdf) does use record-level differential privacy, but doesn't seem to advocate for it in contrast to participant-level privacy. But this seems almost immaterial in that the attacked system doesn't use record-level privacy budgets; if it were redesigned to do so, you could plausibly lay the blame on the record-level calibration, but to do so for a system that doesn't use the calibration seems wrong.
 
@@ -157,9 +157,9 @@ To give a sense for 100-differential privacy, imagine you have a 64bit floating 
 1. Generate two independent uniformly random 64 bit floating point numbers. 
 2. If the two random numbers are equal release their common value, otherwise release the true data.
 
-The probability of releasing anything other than the true answer is 1/2^64, and the probability of releasing any specific value (other than the true answer) is 1/2^128. The probability of releasing the true answer is 1 - 1/2^64 + 1/2^128, which is basically one. When we take the natural logarithm of 2^128, the ratio between the two, we get
+The probability of releasing anything other than the true answer is 1/2^64, and the probability of releasing any specific value (other than the true answer) is 1/2^128. The probability of releasing the true answer is 1 - 1/2^64 + 1/2^128, which is basically one. When we take the natural logarithm of 2^128, the factor by which the probability of any output changes when the true answer is changed, we get
 
-    ln(2^128) = 128 * ln(2) = 88.722839111673
+    epsilon = ln(2^128) = 128 * ln(2) = 88.722839111673
 
 This release mechanism has 88.8 differential privacy, and is nonetheless pretty much guaranteed (probability 1 - 1/2^64) to release the "secret" number in the clear.
 
@@ -179,7 +179,7 @@ Nonetheless, I do believe them that no learning is happening, because .. well le
 
 > To demonstrate that record-level differential privacy is ineffective against an active adversary, we ran the collaborative learning process between the two participants (A and V) with differential privacy enabled. We kept the datasets of the participants distinct: In MNIST experiments, V had only records of classes from 0 to 4 and A had records of classes from 5 to 9 plus the artificial class that A introduces.
 
-Here `A` is the adversary and `V` is the *single non-adversarial participant*. CSS 2017 evaluates a deep learning approach with just one honest participant, whose gradients are noised with a per-participant privacy budget calibrated to completely conceal each gradient contribution. It is no wonder that nothing works.
+Here `A` is the adversary and `V` is the *single non-adversarial participant*. CSS 2017 evaluates a deep learning approach with just one honest participant, whose gradients are noised with a per-participant privacy budget calibrated to conceal each gradient contribution (except not really because 100-DP). It is not a wonder that nothing works.
 
 Now, I don't know that things *should* work. Distributed stochastic gradient descent for deep learning does just about everything you wouldn't want to do to make differential privacy work well: (i) gradient updates are treated as public and must be noised by participants (rather than centrally), (ii) the dimensionality of the gradients is high meaning participants must scale their noise up proportionately, and (iii) you perform some unknown number of iterations to make progress. 
 
@@ -187,14 +187,14 @@ Based on these properties, I would say that distributed stochastic gradient desc
 
 **EDIT**: I mentioned this to Kunal Talwar who gleefully pointed me at their recent work [Learning Differentially Private Language Models Without Losing Accuracy](https://arxiv.org/pdf/1710.06963.pdf), which demonstrates differentially privacy federated learning using per-participant privacy budgets, apparently without losing accuracy. Their secret? Use more than one participant! Many more, in fact; they use 763,430 participants in their headline results. Nonetheless, there paper seems to be a very concrete refutation of the main thesis of CCS 2017, that federated deep learning is fundamentally broken.
 
-Perhaps they should submit to CCS 2018 just to keep that theme rolling? Or perhaps they should break the cycle by sending the paper somewhere better?
+Kunal also mentioned that while it is easy to be flip about "don't overfit", deep learning generally does overfit, and differential privacy is one of the few known counter-measures here. To the extent that CCS 2017 is a cautionary tale broadening the class of learning algorithms that can be attacked, that is worth understanding. But it is also worth understanding that there are techniques that by definition prevent these attacks, and muddying that water is counterproductive.
 
 ### Concluding comments
 
-What the hell is going on in ACM CCS? Combined with the [Differential Privacy as a Mutual Information Constraint](https://github.com/frankmcsherry/blog/blob/master/posts/2017-01-26.md) paper from ACM CCS 2016, this is three years in a row where there are papers at least in part about differential privacy that seem seriously flawed. I'm a bit worried that it is CCS's reviewing rather than federated deep learning that is fundamentally broken.
+What the heck is going on in ACM CCS? Combined with the [Differential Privacy as a Mutual Information Constraint](https://github.com/frankmcsherry/blog/blob/master/posts/2017-01-26.md) paper from ACM CCS 2016, this is three years in a row where there are papers at least in part about differential privacy that seem seriously flawed. I'm a bit worried that it is CCS's reviewing rather than federated deep learning that is fundamentally broken.
 
 As mentioned above, this is all conditional on my interpretation of the technical statements in these papers being correct. Many of the technical statements were subject to interpretation, which is something of a bug itself, but if there is some re-interpretation of the results of either paper that are less deranged than I've presented them, I'd love to know. Presumably the CCS program committee at least had high confidence in the less deranged interpretations as part of their review process, so someone out there can clear things up, right?
 
 ### Disclosure
 
-I got input on the text from Kunal Talwar and Ilya Mironov, who are both former colleagues of mine but are also authors on [1]. They clearly have some bias towards believe that privacy-preserving deep learning is possible, most likely because they have papers showing they've done that (caveat: [1] was published in ACM CCS 2016, but seems to have skipped the curse).
+I solicited input on the text from Kunal Talwar and Ilya Mironov, who are both former colleagues of mine but are also authors on [1]. They clearly have some bias towards the belief that privacy-preserving deep learning is possible, in part because they have papers demonstrating as much (caveat: [1] was published in ACM CCS 2016, but it seems to have skipped the curse).
