--- a/posts/2017-10-27.md
+++ b/posts/2017-10-27.md
@@ -185,7 +185,7 @@ Now, I don't know that things *should* work. Distributed stochastic gradient des
 
 Based on these properties, I would say that distributed stochastic gradient descent for deep learning is perhaps the least-suited problem for differential privacy; it is great to study, but I'm not at all bummed out to hear that it doesn't work.
 
-**EDIT**: I mentioned this to Kunal Talwar who gleefully pointed me at their recent work [Learning Differentially Private Language Models Without Losing Accuracy](https://arxiv.org/pdf/1710.06963.pdf), which demonstrates differentially privacy federated learning using per-participant privacy budgets, apparently without losing accuracy. Their secret? Use more than one participant! Many more, in fact; they use 763,430 participants in their headline results. Nonetheless, there paper seems to be a very concrete refutation of the main thesis of CCS 2017, that federated deep learning is fundamentally broken.
+**EDIT**: I mentioned this to Kunal Talwar who gleefully pointed me at their recent work [Learning Differentially Private Language Models Without Losing Accuracy](https://arxiv.org/pdf/1710.06963.pdf), which demonstrates differentially privacy federated learning using per-participant privacy budgets, apparently without losing accuracy. Their secret? Use more than one participant! Many more, in fact; they use 763,430 participants in their headline results. Nonetheless, their paper seems to be a very concrete refutation of the main thesis of CCS 2017, that federated deep learning is fundamentally broken.
 
 Kunal also mentioned that while it is easy to be flip about "don't overfit", deep learning generally does overfit, and differential privacy is one of the few known counter-measures here. To the extent that CCS 2017 is a cautionary tale broadening the class of learning algorithms that can be attacked, that is worth understanding. But it is also worth understanding that there are techniques that by definition prevent these attacks, and muddying that water is counterproductive.
 
