--- a/posts/2017-12-10.md
+++ b/posts/2017-12-10.md
@@ -14,6 +14,9 @@ Also, the descriptions of the problems are linked for each day, and they are rat
 
 Some quick random access to various days. Also, check out [the solution repository](https://github.com/frankmcsherry/differential-dataflow/tree/master/advent_of_code_2017/src/bin). 
 
+[Day 01](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-01): Matching up elements in a sequence.
+[Day 09](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-09): Parsing sequences of characters.
+[Day 10](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-10): Applying rotations in sequence.
 
 ### Day 00
 
@@ -436,3 +439,7 @@ fn knot_step<I: Iterator<Item=u8>+Clone>(iter: I, rounds: usize) -> Vec<u8> {
 ```
 
 Not everything needs to be dataflow.
+
+In principle you could do this with parallel prefix sum, as each range of `width` values from the iterator can be described by the permutation of `0 .. 256` they induce, using 256 bytes, but the test sequence is only about 40 characters long. 
+
+Maybe this can be homework!
