--- a/posts/2017-12-10.md
+++ b/posts/2017-12-10.md
@@ -14,9 +14,11 @@ Also, the descriptions of the problems are linked for each day, and they are rat
 
 Some quick random access to various days. Also, check out [the solution repository](https://github.com/frankmcsherry/differential-dataflow/tree/master/advent_of_code_2017/src/bin). 
 
-[Day 01](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-01): Matching up elements in a sequence.
-[Day 09](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-09): Parsing sequences of characters.
-[Day 10](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-10): Applying rotations in sequence.
+[Day 01: Matching up elements in a sequence.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-01)
+
+[Day 09: Parsing sequences of characters.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-09)
+
+[Day 10: Applying rotations in sequence.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-10)
 
 ### Day 00
 
