--- a/posts/2017-12-10.md
+++ b/posts/2017-12-10.md
@@ -16,6 +16,12 @@ Some quick random access to various days. Also, check out [the solution reposito
 
 [Day 01: Matching up elements in a sequence.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-01)
 
+[Day 02: Compute checksums of a matrix of numbers.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-02)
+
+[Day 03: Iteratively explore the integer lattice.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-03)
+
+[Day 04: Check for duplicates and anagrams.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-04)
+
 [Day 09: Parsing sequences of characters.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-09)
 
 [Day 10: Applying rotations in sequence.](https://github.com/frankmcsherry/blog/blob/master/posts/2017-12-10.md#day-10)
@@ -131,6 +137,88 @@ That's the whole solution to day 01!
 There are a few extra operators you may not have seen before: `explode`, `consolidate`, and `inspect`. The `explode` operator (taking applications for new names) replaces each element with a list of `(element, count)` entries, which we use to produce `digit` many copies of `part` for each match we find. The `consolidate` operator adds up all occurrences of the same element, and at this point in the computation we have just `1` and `2`, the only data we produced in `explode`; this operator is what sums up the contributions. Finally, `inspect` shows us each of the changes flowing by, which should just be the cumulative increases for `1` and `2`, which should be their sums!
 
 There are of course several other ways you could have done this; for example, you could use the `group` operator to group each of the digits by part, and take their sum in the reducer logic. This has some down-sides, and perhaps we will get around to discussing them later on!
+
+### [Day 02](https://adventofcode.com/2017/day/2)
+
+Day two has us take a grid of numbers and compute a "checksum" in two different ways.
+
+I've represented the input as a collection of triples `(val, row, col)`, much like you might represent a sparse matrix. As it turns out, each of the checksums is a per-row aggregation (done differently for the two different problems of the day), followed by an aggregation over rows. So, we just discard the column identifier and group by row, producing the outputs `1` and `2` with some weights we will need to produce the answer:
+
+```rust
+    entries
+        .map(|(val, row, _col)| (row, val))
+        .group(|_row, vals, output| {
+
+            // Part one solution (difference of max and min within rows)
+            let mut min = vals[0].0;
+            let mut max = vals[0].0;
+            for &(val, _) in vals.iter() {
+                if min > val { min = val; }
+                if max < val { max = val; }
+            }
+            output.push((1, (max - min)));
+
+            // Part two solution (ratio of two even divisors in the row)
+            for &(val1, _) in vals.iter() {
+                for &(val2, _) in vals.iter() {
+                    if (val1 % val2) == 0 && val1 != val2 {
+                        output.push((2, val1 / val2));
+                    }
+                }
+            }
+        })
+        .map(|(_, part)| part)
+        .consolidate()
+        .inspect(|elt| println!("part {} checksum: {:?}", elt.0, elt.2));
+```
+
+Among the values in each row, the first part of the problem wants the difference between the maximum and minimum values, and the second part wants the ratio of the (guaranteed) two elements one of which cleanly divides the other. The two lines 
+
+```rust
+            output.push((1, (max - min)));
+            output.push((2, val1 / val2));
+```
+
+each produce their corresponding output value with the weight we want to accumulate. We then ditch the row identifier keeping only the part identifier, and accumulate and print the results.
+
+Again we use `consolidate`, rather than an operator like `group`. The `consolidate` operator has the special property that it only accumulates the counts for records, and so supports a specialized implementation: whenever it gets a collection of input differences, it just accumulates those differences and reports them. This contrasts with `group` which could perform arbitrary logic, but with greater power come greater complexity of implementation: `group` must re-assemble its full input collection whenever something changes.
+
+The short version of this is that `consolidate` keeps very little state and responds quickly to changes, whereas `group` maintains its accumulated inputs and must reform its inputs on input changes to determine output changes.
+
+### [Day 03](https://adventofcode.com/2017/day/3)
+
+Day 03 is a bit of a chaotic mess. The intent is that you start on the integer grid at (0, 0), and start spiralling outwards (right first, then up and around counter-clockwise). As you go, you determine a value for each new location as a function of the values of the surrounding cell (those whose values have been set). For the first part, your function is `max + 1`, essentially counting up by one. For the secord part, your function is the sum of the set values.
+
+I've implemented this as an iterative process, where each cell advertises its value to each of its eight neighbors, but these advertisements result in a set value only when they contain an advertisement for the predecessor cell in the sequence. This is a bit like how you might write [Conway's Game of Life](https://en.wikipedia.org/wiki/Conway's_Game_of_Life) in differential dataflow, another fun exercise. As it turns out, the sequencing means there isn't much parallelism here, but it works out (if slowly).
+
+Rather than force [the code](https://github.com/frankmcsherry/differential-dataflow/blob/master/advent_of_code_2017/src/bin/day_03.rs) on you, I'm just going to link it at you. It seems to run correctly, but I'm not sure I would recommend it for this specific task.
+
+### [Day 04](https://adventofcode.com/2017/day/4)
+
+This was the first (and only) day that I finished quickly enough that the submission site told me what number I was for each part.
+
+The problems of the day are: given a list of lines of text, how many lines have no duplicate words (part 1) and how many lines have no words that are anagrams of other words (part 2). These are classic interview questions, where you can solve part 1 by sorting the list of words and deduplicating, then checking the length. You can then solve part 2 by first sorting the characters of each of the words (so that anagrams are now the same word), then sorting and deduplicating the text.
+
+```rust
+    phrases
+        .filter(|phrase| {
+
+            let mut words = phrase.split_whitespace().map(|x| x.as_bytes().to_owned()).collect::<Vec<_>>();
+            let len = words.len();
+
+            // comment for part 1, uncomment for part 2.
+            // for word in words.iter_mut() { word.sort(); }
+
+            words.sort();
+            words.dedup();
+            words.len() == len
+        })
+        .map(|_| 1)
+        .consolidate()
+        .inspect(|elt| println!("part {} checksum: {:?}", elt.0, elt.2));
+```
+
+It looks like I was computing part 1 in this bit of code, and then uncommented things to compute the answer to part two. Also, the Rust people would be very cross at me for turning each `&str` into an array slice of `u8` bytes; this answer is not UTF-8 respecting, and Rust gives you lots of good tools to work with that. Perhaps `x.as_bytes().to_owned()` should be `x.chars().collect::<Vec<_>>()`.
 
 ### [Day 09](https://adventofcode.com/2017/day/9)
 
