--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -52,9 +52,9 @@ This rate, 60 million records per second, is a fair bit higher than the "relativ
 
 ### Measuring stream processors
 
-So if we are measuring stream processors, how do they stack up? Are the results actually good, and we should be delighted? Alternately, can we stop the (entertaining, for sure) back and forth between Spark and Flink by landing some extinction level event performance numbers? What system could possibly provide such a cataclysm?
+So if we are measuring stream processors, how do they stack up? Are the results actually good, and we should be delighted? Alternately, can we stop the (entertaining, for sure) back and forth between Spark and Flink by landing some extinction level event performance numbers? What system could possibly precipitate such a cataclysm?
 
-Apropos nothing in particular, yesterday I implemented the modified YSB, with in-system non-JSON data generation and neither Kafka nor Redis, in differential dataflow. I've been running it single-threaded while I've been writing this post! The memory consumption is stable at 2.1MB, and the compute hasn't interfered with the bad-ass music I've been listening to (currently: Snap's "The Power").
+Apropos nothing in particular, yesterday I implemented the modified YSB, with in-system non-JSON data generation and neither Kafka nor Redis, in [differential dataflow](https://github.com/frankmcsherry/differential-dataflow). I've been running it single-threaded while I've been writing this post! The memory consumption is stable at 2.1MB, and the compute hasn't interfered with the bad-ass music I've been listening to (currently: Snap's "The Power").
 
 The differential dataflow fragment looks like this (`links` is the `(ad, campaign)` collection, `views` is the set of views with the filtered event type at the indicated time):
 
@@ -92,7 +92,7 @@ The Drizzle-optimized implementation can process 20 million events per second wi
 
 Wait, 128 computers? 512 cores? Don't we get better results with just one laptop core in differential dataflow?
 
-The Drizzle implementation is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 25x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains a lot of the overhead, as well as the gap between these numbers and DataBrick's own report of 60 million records per second on just ten machines.
+The Drizzle implementation is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 25x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains a lot of the overhead, as well as the gap between these numbers and DataBricks' own report of 60 million records per second on just ten machines.
 
 Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be evaluating a massively parallel JSON deserializer rather than a stream processor. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a really *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
 
